<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_title">

        <ListPreference
            app:defaultValue="host"
            app:key="deviceMode"
            app:title="@string/run_device_as_title"
            app:entries="@array/device_entries"
            app:entryValues="@array/device_values"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="client_IP"
            app:title="@string/client_ip_title"
            app:useSimpleSummaryProvider="true"
            app:dependency="deviceMode"/>

        <Preference
            app:key="scan_client"
            app:title="@string/scan_client_title"
            app:summary="@string/scan_client_summary"
            app:dependency="deviceMode"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="Remote connectivity">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="prefer_tailscale"
            app:summary="Use the Client’s stable Tailscale address whenever both devices are connected"
            app:title="Prefer Tailscale" />

        <Preference
            app:key="tailscale_status"
            app:selectable="false"
            app:title="Tailscale status" />

        <Preference
            app:key="tailscale_action"
            app:title="Open Tailscale" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/theme_title">

        <ListPreference
            app:defaultValue="system"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme_mode"
            app:title="@string/theme_select_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
